fix: [distributed HA] Report unavailable logical ranges in replicated s… [DANI-10268] (#136)
[distributed HA] Report unavailable logical ranges in replicated search fanout

Planned-By: codex

Co-authored-by: orbit[gpt-5.6-terra] <agent@orbit.invalid>